--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
+target
 target/*
-target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-project/*
-project/
 
 ### IntelliJ IDEA ###
+.idea
 .idea/*
-.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -25,6 +23,8 @@ out/
 .classpath
 .factorypath
 .project
+project
+project/*
 .settings
 .springBeans
 .sts4-cache
